--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ ignore = ["E501"]
 
 [tool.mypy]
 python_version = "3.10"
-strict = true
-warn_return_any = true
+warn_return_any = false
 warn_unused_configs = true
+ignore_missing_imports = true
+disable_error_code = ["no-untyped-call", "untyped-decorator", "call-arg", "import-untyped"]
